# minishoot

./: Makefile.am  configure.ac  minishoot.spec  space.cpp
src/: Makefile  Makefile.am  minishoot.cpp  minishoot.h
